@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.21.7
-# Fri Mar 25 03:01:03 2011
+# Fri Mar 25 03:26:15 2011
 #
 CONFIG_MIPS=y
 
@@ -428,6 +428,7 @@ CONFIG_BRIDGE_IGMPP_PROCFS=y
 CONFIG_BRIDGE_FASTPATH=y
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
+CONFIG_VLAN_8021Q_DOUBLE_TAG=y
 # CONFIG_DECNET is not set
 CONFIG_LLC=y
 # CONFIG_LLC2 is not set
@@ -1130,7 +1131,6 @@ CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 # CONFIG_GE1_RGMII_FORCE_1000 is not set
 # CONFIG_GE1_RGMII_AN is not set
 CONFIG_RT_3052_ESW=y
-# CONFIG_ESW_DOUBLE_VLAN_TAG is not set
 # CONFIG_RAETH_HAS_PORT5 is not set
 # CONFIG_RAETH_GMAC2 is not set
 CONFIG_RAETH_DHCP_TOUCH=y
