@@ -427,6 +427,7 @@ CONFIG_BRIDGE_IGMPP_PROCFS=y
 CONFIG_BRIDGE_FASTPATH=y
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
+CONFIG_VLAN_8021Q_DOUBLE_TAG=y
 # CONFIG_DECNET is not set
 CONFIG_LLC=y
 # CONFIG_LLC2 is not set
@@ -1129,7 +1130,6 @@ CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 # CONFIG_GE1_RGMII_FORCE_1000 is not set
 # CONFIG_GE1_RGMII_AN is not set
 CONFIG_RT_3052_ESW=y
-# CONFIG_ESW_DOUBLE_VLAN_TAG is not set
 # CONFIG_RAETH_HAS_PORT5 is not set
 # CONFIG_RAETH_GMAC2 is not set
 CONFIG_RAETH_DHCP_TOUCH=y
