@@ -312,7 +312,8 @@
 29) Fix for full disable fastnat mode if need.<br>
 30) Fix Cone NAT implementation.<br>
 31) Fix syslog in webui without CONFIG_LOGREAD in busybox.<br>
-32) Fix EAP in bridge/mbssid mode.<br> 
+32) Fix EAP in bridge/mbssid mode.<br>
+33) Enable double vlan tag support per default.<br> 
 
 <br><br>
 <b>For support see:</b><br>
